<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.profile.view.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profile_Fragment_Username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/profile_Fragment_options_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/options" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/profile_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar_layout_profile_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_profile_fragment"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/user_profile" />

                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/posts"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/total_post"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:gravity="center"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/total_followes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:gravity="center"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/total_followings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/edit_account_setting"
                        android:layout_width="170dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/buttons_background"
                        android:text="@string/edit_profile" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mid_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/full_name_profile_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/bio_profile_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mid2_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@color/Grey_Color"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/image_grid_view_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/grid" />

                <ImageButton
                    android:id="@+id/image_save_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="49dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/save_large_icon" />

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/userPostRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/profileBottomNavView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mid2_bar"
                    tools:ignore="NotSibling" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/profileBottomNavView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/toolbar_background"
        app:itemIconSize="30dp"
        app:itemIconTint="@color/Grey"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottomnavigation_menu" />
</RelativeLayout>

